revert: "fix: ios button alignment"
This reverts commit 25c922e7cfff78afdb43ac7ebe147612df98c7cc.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -99,9 +99,6 @@ button {
 	min-width: 70px;
 	font-size: calc(0.7rem + 0.7vw);
 	font-family: "Imprima";
-	display: inline-flex;
-	justify-content: center;
-	line-height: 1.5;
 	height: inherit;
 }
 
